# ScoutOS

./: .env  .gitignore  .python-version  Modelfile  README.md  chat_memory.json  clean_memory.py  config.yml  github-recovery-codes.txt  old2_scoutos_starter.py  old3_scoutos_starter.py  old4_scoutos_starter.py  pyproject.toml  quick_test.py  requirements.txt  requirements_intel_mac.txt  run_ollama_and_streamlit.sh  scoutos_starter.py  semantic_document.py  simple_vector_search.py  singleAgnet_scoutos_starter.py
data/: sample_document.txt
utils/: llm.py  memory.py  web_search.py
