[project]
name = "poetry add $(cat requirements-txt | grep -v '^\\-e' | cut -d '=' -f1)"
version = "0.1.0"
description = ""
authors = [
    {name = "Garlon Garth",email = "gjgcompletion@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry add $(cat requirements"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
